--- a/contact.css
+++ b/contact.css
@@ -1,39 +1,8 @@
 #fs-frm-inputs {
-    font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
 
 #contact-offset {
-    position: relative;
-    padding-top: 6em;
+  position: relative;
+  padding-top: 6em;
 }
-
-/* .form {
-    position: relative;
-} */
-
-/* .btn-white {
-    background-color: white;
-    border-color: transparent;
-    color: black;
-}
-
-.btn-lg {
-    padding: 15px 30px !important;
-    display: inline-block;
-}
-
-.btn button {
-    font-family: 'Open Sans Source', sans-serif !important; */
-    /* display: block;
-    margin-left: 100px; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* font-size: 14px;
-    letter-spacing: 1.5px;
-    text-decoration: none !important;
-    text-align: center;
-    transition: all 0.3s ease 0s;
-    outline: none;
-    border-width: 1px;
-    border-style: solid;
-    vertical-align: middle; */
