--- a/hero.css
+++ b/hero.css
@@ -1,18 +1,10 @@
-/* #logo {
-  max-width: 400px;
-  position: absolute;
-  z-index: 1;
-  left: 40%;
-  top: 25%;
-} */
-
 /* Media Queries */
 
 @media all and (max-width: 991.98px) {
   #logo {
     /* margin-top: 30%;
     position: relative; */
-    transform:translateY(28%)
+    transform: translateY(28%);
   }
 }
 
@@ -20,33 +12,20 @@
   #logo {
     /* margin-top: 30%;
     position: relative; */
-    transform:translateY(25%)
+    transform: translateY(25%);
   }
 }
 
-
+/* #background-image {
+  height: 45vh;
+} */
 
 #logo {
   /* max-width: 800px; */
   max-width: 40%;
   position: absolute;
   left: 30%;
-  margin-top: 4%;
+  margin-top: 8%;
   /* object-fit: cover;
   object-position: center; */
 }
-
-/* .hero-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 6%;
-  padding-top: 8%;
-} */
-
-/* .logo-image {
-  height: auto;
-  width: 100%;
-  max-width: 400px;
-  background-image: url('./assets/LogoWhite.png');
-}  */
