--- a/navbar.css
+++ b/navbar.css
@@ -6,7 +6,7 @@
 }
 
 #navbarNav {
-  margin-right: 3rem;
+  /* margin-right: 3rem; */
 }
 
 .bg-light {
@@ -16,7 +16,7 @@
 .navbar-brand {
   font-family: "Alegreya", serif;
   font-weight: 400;
-  margin-left: 3rem;
+  /* margin-left: 3rem; */
   color: white;
   font-size: 18px;
   letter-spacing: 1.5px;
@@ -24,8 +24,8 @@
 }
 
 .custom-toggler .navbar-toggler-icon {
- border-color: rgb(255, 255, 255);
- color: white !important;
+  border-color: rgb(255, 255, 255);
+  color: white !important;
 }
 
 #nav-over {
