--- a/hero.css
+++ b/hero.css
@@ -1,3 +1,17 @@
+#logo {
+  /* max-width: 800px; */
+  max-width: 40%;
+  position: absolute;
+  left: 30%;
+  margin-top: 10%;
+  /* margin-top: 17%; */
+  /* object-fit: cover;
+  object-position: center; */
+}
+
+#background-image {
+  height: 100vh;
+}
 /* Media Queries */
 
 @media all and (max-width: 991.98px) {
@@ -14,18 +28,4 @@
     position: relative; */
     transform: translateY(25%);
   }
-}
-
-/* #background-image {
-  height: 45vh;
-} */
-
-#logo {
-  /* max-width: 800px; */
-  max-width: 40%;
-  position: absolute;
-  left: 30%;
-  margin-top: 8%;
-  /* object-fit: cover;
-  object-position: center; */
 }
