--- a/navbar.css
+++ b/navbar.css
@@ -1,5 +1,6 @@
 .navbar-dark {
   position: absolute;
+  /* overflow: hidden; */
   width: 100%;
   z-index: 1;
 }
@@ -11,6 +12,7 @@
 .navbar-brand {
   font-family: "Alegreya", serif;
   font-weight: 400;
+  /* margin-left: 3rem; */
   color: white;
   font-size: 18px;
   letter-spacing: 1.5px;
