--- a/about.css
+++ b/about.css
@@ -1,14 +1,10 @@
 #about-me {
-  /* height: 50vh; */
-  /* width: 100%; */
   line-height: 1.8;
   color: #71797e;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  margin-top: 3em;
-  margin-bottom: 3em;
-  /* break-after: auto; */
+  margin-top: 5rem;
 }
 
 .para {
@@ -27,7 +23,6 @@
   font-size: 40px;
   color: #c5247e;
   align-content: center;
-  /* margin-left: 80px; */
   padding-top: 10px;
 }
 
