--- a/credo.css
+++ b/credo.css
@@ -1,16 +1,40 @@
 .my-credo-title {
   text-align: center;
+  /* display: flex; */
+  /* align-content: center; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* align-content: center; */
   font-size: 32px;
   color: black;
   font-family: "Playfair Display", serif;
   font-weight: 500;
   margin-top: 3em;
+  /* margin-bottom: 3em; */
 }
 
 .credo-divs {
   text-align: center;
   margin: 50px;
+  /* padding-bottom: 2000px; */
+  /* margin-left: auto;
+  margin-right: auto; */
 }
+
+/* .h1 {
+  font-size: 3.5rem;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  display: flex;
+  font-family: "Montserrat", sans-serif;
+  font-weight: medium;
+} */
+
+/* .credo-divs h1 {
+  font-size: 16rem;
+} */
 
 .h1-credo {
   font-size: 20px;
@@ -29,6 +53,7 @@
   font-weight: 400;
   text-align: center;
   justify-content: center;
+  /* padding-left: .309%; */
   margin: 0.619%;
 }
 
@@ -38,6 +63,7 @@
   font-weight: 400;
   text-align: center;
   justify-content: center;
+  /* padding-left: .309%; */
   margin: 0.309%;
 }
 
@@ -48,6 +74,7 @@
   text-align: center;
   justify-content: center;
   justify-items: center;
+  /* padding-left: 1.35%; */
   margin-right: 1.238%;
 }
 
@@ -77,6 +104,7 @@
   text-align: center;
   justify-content: center;
   justify-items: center;
+  /* padding-right: 2.05%; */
   margin-left: 6.5%;
 }
 
@@ -88,6 +116,7 @@
   justify-content: center;
   justify-items: center;
   margin-left: 1.5%;
+  /* padding-left: 5px; */
 }
 
 .h3-section-success {
@@ -98,9 +127,12 @@
   justify-content: center;
   justify-items: center;
   margin-left: 0.743%;
+  /* padding-left: 5px; */
 }
 
 .credo-image {
+  /* display: flex; */
+  /* flex-direction: row; */
   justify-content: center;
   align-items: center;
   align-content: center;
