--- a/dividerImage.css
+++ b/dividerImage.css
@@ -1,5 +1,7 @@
 #overlay-offset {
   position: absolute;
+  /* width: 100%; */
+  /* margin-top: 59%; */
   border-radius: 0 !important;
   padding: 0;
   margin-top: 3em;
@@ -18,6 +20,9 @@
 }
 
 .image {
+  /* position:absolute; */
+  /* width: 110px;
+        height: 125px; */
   width: 130px;
   height: 145px;
   margin-left: 900px;
