--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import "variables.css";
+/* @import "mainContainer.css"; */
 @import "navbar.css";
 @import "about.css";
 @import "hero.css";
@@ -6,7 +7,7 @@
 @import "projects.css";
 @import "contact.css";
 @import "skillset.css";
-@import "dividerImage.css";
+/* @import "dividerImage.css"; */
 @import "footer.css";
 
 body {
@@ -14,16 +15,37 @@ body {
   padding-bottom: 80px;
 }
 
+/* main {
+  height: 100%;
+} */
+
 body {
   scroll-behavior: smooth;
 }
 
-@media screen and (max-width: 550px) {
-  #background-image {
-    transition: all 333ms ease-out;
+/* body {
+  max-width: 100%;
+  overflow-x: hidden;
+} */
+
+/* @media (min-width: 576px) {...}
+@media (min-width: 768px) {...}
+@media (min-width: 992px) {...}
+@media (min-width: 1200px) {...}
+@media (min-width: 1400px) {...}
+@media (max-width: 575.98px) {...}
+@media (max-width: 767.98px) {...}
+@media (max-width: 991.98px) {...}
+@media (max-width: 1399.98px) {...} */
+
+@media screen and (max-width: 575px) {
+  #navbarNav {
+    margin-top: 6px;
+    background: linear-gradient(black, rgba(0, 0, 0, 0.85), black);
+    transform: scaleX(1.07);
   }
 
-  #background-image.expanded {
-    transform: scale(1.66);
+  .nav-item {
+    padding-left: 12px;
   }
 }
