--- a/responsive.css
+++ b/responsive.css
@@ -1,111 +1,262 @@
-@media only screen and (max-width: 768px) {
-  .body {
-    height: auto;
-    width: 100%;
-  }
+.h1-my-skillset {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 3em;
+  /* align-content: center;
+  align-items: center; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* width: 100px; */
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+  font-size: 32px;
+  /* align-content: center;
+  align-items: center; */
 }
 
-@media only screen and (max-width: 280px) {
-  .body {
-    height: auto;
-    width: 100%;
-  }
+#skills-div {
+  /* width: 15%;
+  width: 20%;
+  padding: 1em;
+  margin: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  border: 1px solid white;
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto; */
+  /* flex: 1; */
+  margin: 4rem;
+  /* display: flex; */
+  /* justify-content: center; */
 }
 
-@media only screen and (max-width: 540px) {
-  .body {
-    height: auto;
-    width: 100%;
-  }
+/* button {
+  padding: 10px 20px;
+  margin: 5px;
+  background-color: white;
+  color: black;
+  border: none;
+  outline: none;
+} */
+
+.skill-text {
+  font-size: 20px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  text-align: center;
+  /* letter-spacing: 1px; */
 }
 
-@media only screen and (max-width: 1024px) {
-  .body {
-    height: auto;
-    width: 100%;
-  }
+/* #skill-summary {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", serif;
+  font-weight: 400;
+} */
+
+#html-css {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  color: #c5247e;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 1668px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#skill-html {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 2048px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#bootstrap-5 {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 1640px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#skill-bootstrap {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 768px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#wire-frame {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 375px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#skill-wireframe {
+  display: block;
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 414px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#java-script {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 375px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#skill-bootstrap {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 320px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#skill-wireframe {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 411px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+.skill-js {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 411px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#re-act {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 360px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+.skill-react {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
 
-@media only screen and (max-width: 360px) {
-  .body {
-    height: auto;
-    width: 100vw;
-  }
+#node-js {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
 }
+
+.skill-node {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+}
+
+#git-hub {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+}
+
+.skill-git {
+  display: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+}
+
+#fa-html5 {
+  color: #c5247e;
+}
+
+.html5css:hover {
+  color: #c5247e;
+}
+
+.bootstrap:hover {
+  color: #c5247e;
+}
+
+.wireframe:hover {
+  color: #c5247e;
+}
+
+.javascript:hover {
+  color: #c5247e;
+}
+
+.react:hover {
+  color: #c5247e;
+}
+
+.node:hover {
+  color: #c5247e;
+}
+
+.git:hover {
+  color: #c5247e;
+}
+
+.fa-html5,
+.fa-bootstrap,
+.fa-js-square,
+.fa-react,
+.fa-node-js,
+#fagithub {
+  padding-bottom: 21.875%;
+  display: flex;
+  justify-content: center;
+}
+
+.far {
+  padding-bottom: 21.875%;
+  display: flex;
+  justify-content: center;
+}
+
+/* .fa-linkedin {
+}
+.fa-github {
+} */
