--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
-@import "variables.css";
-@import "navbar.css";
-@import "about.css";
-@import "hero.css";
-@import "credo.css";
-@import "projects.css";
-@import "contact.css";
-@import "skillset.css";
-@import "dividerImage.css";
-@import "footer.css";
+@import 'variables.css';
+@import 'navbar.css';
+@import 'about.css';
+@import 'hero.css';
+@import 'credo.css';
+@import 'projects.css';
+@import 'contact.css';
+@import 'skillset.css';
+@import 'dividerImage.css';
+@import 'footer.css';
 
 body {
   height: 100%;
@@ -19,13 +19,7 @@ body {
 }
 
 @media screen and (max-width: 575px) {
-  #navbarNav {
-    margin-top: 6px;
-    background: linear-gradient(black, rgba(0, 0, 0, 0.85), black);
-    transform: scaleX(1.07);
-  }
-
-  .nav-item {
-    padding-left: 12px;
+  #background-image {
+    height: 100%;
   }
 }
