--- a/main.css
+++ b/main.css
@@ -1,17 +1,4 @@
-<<<<<<< HEAD
-@import 'variables.css';
-@import 'navbar.css';
-@import 'about.css';
-@import 'hero.css';
-@import 'credo.css';
-@import 'projects.css';
-@import 'contact.css';
-@import 'skillset.css';
-@import 'dividerImage.css';
-@import 'footer.css';
-=======
 @import "variables.css";
-/* @import "mainContainer.css"; */
 @import "navbar.css";
 @import "about.css";
 @import "hero.css";
@@ -19,9 +6,8 @@
 @import "projects.css";
 @import "contact.css";
 @import "skillset.css";
-/* @import "dividerImage.css"; */
+@import "dividerImage.css";
 @import "footer.css";
->>>>>>> chase
 
 body {
   height: 100%;
