--- a/projects.css
+++ b/projects.css
@@ -149,6 +149,68 @@ body .container {
   opacity: 1;
 }
 
+.row3 .item {
+  padding: 0;
+}
+.row3 .item img {
+  padding: 0 !important;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.row3 a:hover .item img,
+.row3 a:focus .item img {
+  opacity: 0.1;
+}
+.row3 h4,
+.row3 p {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.row3 a .item h4 {
+  font-family: "Playfair Display", serif;
+  font-size: 18px;
+  position: relative;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding-bottom: 3em;
+  position: absolute;
+  top: 35%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  opacity: 0;
+}
+.row3 a:hover .item h4,
+.row3 a:focus .item h4 {
+  opacity: 1;
+}
+.row3 a .item p {
+  font-family: "Open Source Sans", sans-serif;
+  font-size: 10px;
+  position: absolute;
+  color: #fff;
+  text-transform: uppercase;
+  padding-top: 6em;
+  letter-spacing: 2px;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  opacity: 0;
+}
+
+.row3 a:hover .item p,
+.row3 a:focus .item p {
+  opacity: 1;
+}
+
 @media screen and (max-width: 991px) {
   .col-sm-4 {
     width: 50%;
